# HydrideSegmentation

./: .gitignore  AGENTS.md  Augment_Hydride_Dataset.py  CONTRIBUTE.md  Export_hydrideMaskXCF_to_PNG.py  GUI.py  LICENSE  README.md  applyMaskToMatrix.py  collectAllHydrideImagesAtOnePlace.py  deploy_on_intranet.md  developer_guide.md  hydrideOrientationAnalyzer.py  package-lock.json  package.json  prepare_segmentation_dataset_for_training.py  pyproject.toml  readme.md  requirements-core.txt  requirements-docs.txt  requirements-gui.txt  requirements.txt  run_training_jobs.sh  segmentationEvlauater.py  segmentationMaskCreation.py  setup.py  submitJob_1GPU.sh
configs/: README.md  data_prep.default.yml  dataset_prepare.augmentation.debug.yml  dataset_prepare.augmentation.disabled.yml  dataset_prepare.augmentation.multi.yml  dataset_prepare.augmentation.shadow_blur.yml  dataset_prepare.default.yml  dataset_qa.default.yml  dataset_split.default.yml  deploy_canary_shadow.default.yml  deploy_health.default.yml  deploy_perf.default.yml  deploy_worker.default.yml  deployment_package.default.yml  evaluate.default.yml  feedback_build_dataset.default.yml  feedback_bundle.default.yml  feedback_capture.default.yml  feedback_ingest.default.yml  feedback_train_trigger.default.yml  hpc_ga.airgap_pretrained.default.yml  hpc_ga.default.yml  hpc_ga.top5_airgap_pretrained.default.yml  hpc_ga.top5_scratch.default.yml  inference.default.yml  package.default.yml  phase_gate.default.yml  phaseid_oh5_benchmark.default.yml  preflight.default.yml  promotion_policy.default.yml  registry_validation.default.yml  segmentation_classes.json  support_bundle.default.yml  train.default.yml
data/: README.md
docs/: README.md  algorithms.md  archive_index.md  base_zero_audit.md  benchmark_metrics_reference.md  cli_windows_linux.md  code_architecture_map.md  conf.py  configuration_workflow.md  conventional_segmentation_pipeline.md  current_state_gap_analysis.md  data_preparation.md  deployment_ops_workflow.md  deployment_productization_master_roadmap.md  developer_guide.md  development_roadmap.md  development_workflow.md  documentation_principles.md  documentation_upgrade_plan.md  failure_taxonomy.md  feedback_active_learning_pipeline.md  foundation_strategy.md  frozen_checkpoint_registry.md  glossary.md  (+53 more)
hydride_segmentation_tool/: DEV_GUIDE.md  README.md  USER_GUIDE.md  agents.md  pyproject.toml  requirements.txt
hydride_segmentation_tool/src/hydride_app/: __init__.py  pipeline.py
hydride_segmentation_tool/src/hydride_app/core/: image_io.py  metrics.py  segmentation.py
hydride_segmentation_tool/src/hydride_app/gui/: app.py
hydride_segmentation_tool/src/hydride_app/utils/: paths.py
hydride_segmentation_tool/tests/: test_image_io.py  test_metrics.py  test_segmentation.py
(+285 files in other folders)
