[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hydride-segmentation"
version = "0.22.0"
description = "Toolkit for zirconium hydride segmentation and analysis"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "numpy",
    "matplotlib",
    "opencv-python-headless",
    "scikit-image",
    "scikit-learn",
    "pillow",
    "albumentations",
    "tqdm",
    "scipy",
    "torch",
    "segmentation-models-pytorch",
    "transformers",
    "huggingface_hub",
    "flask",
    "pydantic",
    "PyYAML",
]

[project.optional-dependencies]
core = [
    "opencv-python-headless",
]
gui = [
    "PySide6",
]
transformers = [
    "transformers",
    "huggingface_hub",
]

[project.scripts]
hydride-gui = "hydride_segmentation.gui:main"
hydride-orientation = "hydride_segmentation.hydride_orientation_analyzer:main"
segmentation-eval = "hydride_segmentation.segmentation_evaluator:main"
hydride-service = "hydride_segmentation.service:main"
hydride-gui-qt = "hydride_segmentation.qt_gui:main"
package-corrections-dataset = "scripts.package_corrections_dataset:main"
microseg-cli = "scripts.microseg_cli:main"
microseg-phase-gate = "scripts.run_phase_gate:main"
microseg-benchmark-suite = "scripts.hydride_benchmark_suite:main"
prep-dataset = "src.microseg.data_preparation.cli:main"
